rearrange columns, disable auto-insertion [KBASE-1090]

--- a/src/plugin/modules/components/feedViewer.css
+++ b/src/plugin/modules/components/feedViewer.css
@@ -25,6 +25,7 @@
 
 .component_feeds_feed-viewer .-feed .-row.-header {
     font-weight: bold;
+    border-bottom: 1px silver solid;
 }
 
 .component_feeds_feed-viewer .-feed .-row {
