--- a/src/plugin/resources/css/feeds.css
+++ b/src/plugin/resources/css/feeds.css
@@ -5,3 +5,71 @@
 .controls-form {
     /* max-width: 300px; */
 }
+
+.unseen-badge {
+    background-color: rgb(169, 68, 66);
+}
+
+.feed-note {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 100%;
+    padding: 10px 5px;
+    border-top: 1px solid #ccc;
+}
+
+.feed-note.seen {
+    background-color: rgb(255, 255, 255);
+}
+
+.feed-note-icon {
+    width: 10%;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.feed-note-body {
+    width: 80%;
+    font-size: 12pt;
+}
+
+.feed-note-control {
+    width: 10%;
+    text-align: center;
+}
+
+.feed-tabs {
+    float: left;
+    border: 1px solid #ccc;
+    border-right: 0;
+    font-size: 14pt;
+    width: 25%;
+    background-color: rgb(216, 214, 214);
+    cursor: pointer;
+}
+
+.feed-tab-btn {
+    padding: 10px;
+}
+
+.feed-tab-btn.feed-selected {
+    background-color: rgb(87, 172, 87);
+    color: #fff;
+}
+
+.feed-tab-btn:hover:not(.feed-selected) {
+    background-color: rgb(155, 151, 151);
+}
+
+.feed-tab-btn.selected {
+    cursor: default;
+}
+
+.feed-content {
+    float: left;
+    border: 1px solid #ccc;
+    border-top: none;
+    width: 75%;
+    min-height: 100px;
+}
