--- a/src/plugin/resources/css/feeds.css
+++ b/src/plugin/resources/css/feeds.css
@@ -13,16 +13,16 @@
     background-color: rgb(169, 68, 66);
 }
 
-.feed-actor {
+.feed-entity {
     font-weight: bold;
 }
 
-.feed-actor a {
+.feed-entity a {
     text-decoration: none;
     font-weight: normal;
 }
 
-.feed-actor a:hover {
+.feed-entity a:hover {
     text-decoration: underline;
 }
 
@@ -76,7 +76,7 @@
     float: left;
     border: 1px solid #ccc;
     border-right: 0;
-    font-size: 14pt;
+    font-size: 12pt;
     width: 25%;
     height: 100%;
     background-color: rgb(214, 214, 214);
