--- a/src/plugin/resources/css/feeds.css
+++ b/src/plugin/resources/css/feeds.css
@@ -41,14 +41,15 @@
 }
 
 .feed-note-icon {
-    width: 10%;
+    width: 5%;
     text-align: center;
     vertical-align: middle;
 }
 
 .feed-note-body {
-    width: 80%;
+    width: 85%;
     font-size: 12pt;
+    padding-left: 5%;
 }
 
 .feed-link {
